<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.preference.PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:title="@string/settings_fragment_title">

    <android.support.v7.preference.Preference
        android:key="delete_preference"
        android:title="@string/delete_app"
        android:summary="@string/delete_app_summary" />

    <android.support.v7.preference.Preference
        android:key="backup_preference"
        android:title="@string/backup_database"
        android:summary="@string/backup_database_summary" />

    <android.support.v7.preference.Preference
        android:key="restore_preference"
        android:title="@string/restore_database"
        android:summary="@string/restore_database_summary" />

</android.support.v7.preference.PreferenceScreen>