<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:text="@string/enable_adhell_title"
        android:textStyle="bold"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/adminInfoTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/titleTextView"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:text="@string/enable_adhell_info" />

    <Button
        android:id="@+id/turnOnAdminButton"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/adminInfoTextView"
        android:layout_centerInParent="true"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/turn_on_admin" />

    <TextView
        android:id="@+id/knoxInfoTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/turnOnAdminButton"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:text="@string/license_key_info" />

    <EditText
        android:id="@+id/knoxKeyEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/knoxInfoTextView"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/license_key"
        android:inputType="text" />

    <EditText
        android:id="@+id/backwardKeyEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/knoxKeyEditText"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/license_backward_key"
        android:inputType="text" />

    <Button
        android:id="@+id/activateKnoxButton"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/backwardKeyEditText"
        android:layout_centerInParent="true"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:text="@string/activate_license" />

</RelativeLayout>